<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_blue_700"
    tools:context=".activity.RegisterAcivity">


    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@+id/statusBar"
        android:background="@color/md_blue_900"
        android:translationZ="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:textAlignment="center"
            android:textColor="@color/md_white_1000"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="Votre nom"
            android:inputType="textPersonName"
            android:textColor="@color/md_black_1000"
            android:background="@drawable/shape"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:textStyle="normal|bold" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="18dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/md_black_1000"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="Votre prénom"
            android:inputType="textPersonName"
            android:background="@drawable/shape"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:textStyle="normal|bold" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/sexeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/firstname"
        android:layout_marginTop="18dp">

        <RadioButton
            android:id="@+id/radioButtonSexe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:checked="true"
            android:text="Masculin"
            android:textStyle="normal|bold" />

        <RadioButton
            android:id="@+id/radioButtonSexeF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="-32dp"
            android:text="Feminin"
            android:textStyle="normal|bold" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sexeGroup"
        android:layout_marginTop="18dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:textColor="@color/md_black_1000"
            android:hint="@string/phone"
            android:inputType="phone"
            android:background="@drawable/shape"
            android:padding="8dp"
            android:textStyle="normal|bold" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_marginTop="18dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/shape"
            android:textColor="@color/md_black_1000"
            android:padding="8dp"
            android:textStyle="normal|bold" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mail"
        android:layout_marginTop="18dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/md_black_1000"
            android:background="@drawable/shape"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:textStyle="normal|bold" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/md_white_1000"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_below="@+id/pass"
        android:layout_marginTop="18dp"
        android:background="@color/md_blue_900"
        android:text="@string/text_register" />

    </LinearLayout>
</RelativeLayout>
